# Terva

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  audio-streamer.terva  naim-audio.terva  roby-robot.terva  streamer.terva
apps/cli/: CMakeLists.txt
apps/cli/src/: main.cpp
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/scripts/: generate_app_icons.sh
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: bridge.cc  bridge.hpp  bridge.rs  error.rs  lib.rs  main.rs  project.rs
apps/desktop/src/components/layout/: ActivityRail.tsx  StatusBar.tsx  WorkbenchShell.tsx  WorkspaceMenuContext.tsx
apps/desktop/src/components/project-visuals/: product-avatar.tsx  server-visuals.tsx
apps/desktop/src/components/ui/: avatar.tsx  dropdown-menu.tsx
apps/desktop/src/components/workspace/: NewProjectDialog.tsx
apps/desktop/src/hooks/: use-theme.ts  use-zoom.ts  useActiveProject.ts
apps/desktop/src/lib/: activity.ts  tauri.ts
apps/desktop/src/pages/: Auth.tsx  Backends.tsx  Experimental.tsx  Generators.tsx  Inspector.tsx  Logs.tsx  Project.tsx  Server.tsx  ThemeReference.tsx  Welcome.tsx
apps/desktop/ui/: index.html  styles.css
apps/example-backend/: CMakeLists.txt
apps/example-backend/src/: main.cpp
apps/server/: CMakeLists.txt
apps/server/src/: main.cpp
core/: CMakeLists.txt
core/include/terva/core/: json.hpp  version.hpp
core/include/terva/core/backend/: backend.hpp  http_backend.hpp
core/include/terva/core/capability/: executor.hpp
core/include/terva/core/client/: http_session.hpp  stdio_session.hpp
core/include/terva/core/engine/: engine.hpp
core/include/terva/core/logging/: jsonl_logger.hpp
core/include/terva/core/mcp/: runtime.hpp
core/include/terva/core/project/: model.hpp  parser.hpp  validator.hpp
core/src/: version.cpp
core/src/backend/: http_backend.cpp
core/src/capability/: executor.cpp
core/src/client/: http_session.cpp  stdio_session.cpp
core/src/engine/: engine.cpp
core/src/logging/: jsonl_logger.cpp
core/src/mcp/: runtime.cpp
core/src/project/: parser.cpp  validator.cpp
docs/: architecture.md  development.md  project-format.md  proto-migration-plan.md
examples/: demo-volume.terva
proto/: CMakeLists.txt
proto/terva/project/v1/: project.proto  project.schema-diagram.md
