[package]
name = "terva-desktop"
version = "0.1.0"
description = "Terva desktop application"
authors = ["Naim Audio"]
edition = "2021"

[lib]
name = "terva_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
rfd = "0.15"
