[package]
name = "terva-desktop"
version = "1.0.2"
description = "Terva desktop application"
authors = ["Terva"]
edition = "2021"

[lib]
name = "terva_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1"
cxx-build = "1"
pkg-config = "0.3"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
rfd = "0.15"
cxx = "1"
trash = "5"
